# polymarket-politics-markets-trading-bot-rust

./: .gitignore  Cargo.toml  README.md  env.template
src/: bot.rs  clob.rs  config.rs  gamma.rs  logger.rs  main.rs  types.rs
